[package]
name           = "prometheus_folder_size_exporter"
version        = "0.1.0"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>"]
description    = "Prometheus Folder Size Exporter"
edition        = "2018"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
documentation  = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
homepage       = "https://github.com/MindFlavor/prometheus_folder_size_exporter"

keywords       = ["prometheus", "exporter", "filesystem", "size", "folder"]
categories     = ["api-bindings"]


[dependencies]
log            = "0.4.6"
env_logger     = "0.6.0"
futures        = "0.1.25"
clap           = "2.32.0"
serde_json     = "1.0.37"
serde          = "1.0.85"
serde_derive   = "1.0.85"
failure        = "0.1.5"
hyper          = "0.12.23"
http           = "0.1.15"
