[package]
name           = "prometheus_folder_size_exporter"
version        = "0.4.1"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>", "Guido Scatena <guido.scatena@unipi.it>"]
description    = "Prometheus Folder Size Exporter"
edition        = "2018"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
documentation  = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
homepage       = "https://github.com/MindFlavor/prometheus_folder_size_exporter"

keywords       = ["prometheus", "exporter", "filesystem", "size", "folder"]
categories     = ["api-bindings"]


[dependencies]
log                      = "0.4.6"
env_logger               = "0.6.0"
clap                     = "2.32.0"
serde_json               = "1.0.37"
serde                    = "1.0.85"
serde_derive             = "1.0.85"
thiserror		 = "1.0"
hyper                    = "0.14"
http                     = "0.2.1"
tokio                    = { version = "0.2.0", features = ["full"] }
prometheus_exporter_base = { version = "1.2.0", features = ["hyper_server"] }

