[package]
name           = "prometheus_folder_size_exporter"
version        = "0.5.0"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>", "Guido Scatena <guido.scatena@unipi.it>"]
description    = "Prometheus Folder Size Exporter"
edition        = "2018"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
documentation  = "https://github.com/MindFlavor/prometheus_folder_size_exporter"
homepage       = "https://github.com/MindFlavor/prometheus_folder_size_exporter"

keywords       = ["prometheus", "exporter", "filesystem", "size", "folder"]
categories     = ["api-bindings"]


[dependencies]
log                      = "0.4"
env_logger               = "0.7"
clap                     = "2.33"
serde_json               = "1.0"
serde                    = "1.0"
serde_derive             = "1.0"
thiserror		 = "1.0"
hyper                    = {version = "0.14", features = ["server"] }
http                     = "0.2.1"
tokio                    = { version = "1.4", features = ["full"] }
prometheus_exporter_base = { version = "1.2.0", features = ["hyper_server"] }

